fix some layout problems

--- a/resources/css/events/create-event.css
+++ b/resources/css/events/create-event.css
@@ -1,3 +1,7 @@
+#create-event {
+  min-width: 560px;
+}
+
 .form-container {
   background-color: #1B1B1B !important;
 }
